# findif

./: plot_everything.py  plot_my_cub_find_if.py
equals/: CMakeLists.txt  bench_equal.cu  bench_find.cu
plot/: plot.py
